@@ -1,3 +1,5 @@
+2/28/12 update beam only when it's visible
+2/28/12 major simplification of BeamNode
 2/28/12 add model of light beam, detect interaction with detector probe
 2/28/12 change drag bounds of ruler so that it can't get lost behind control panel
 # 0.00.13 (61715) Feb 23, 2012
